tarpc/tests/compile_fail/must_use_request_dispatch.stderr
error: unused `RequestDispatch` that must be used
  --> tests/compile_fail/must_use_request_dispatch.rs:16:9
   |
16 |         WorldClient::new(client::Config::default(), client_transport).dispatch;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> tests/compile_fail/must_use_request_dispatch.rs:14:12
   |
14 |     #[deny(unused_must_use)]
   |            ^^^^^^^^^^^^^^^
